--- a/Index.html
+++ b/Index.html
@@ -11,6 +11,7 @@
             <li>Nom: Moussa Tankari</li>
             <li>Prénom: Ibrahim</li>
             <li>Adresse: 343 Rue d'Oyamburua</li>
+            <li>Adresse: 343 Rue d'Oyamburua</li>
         </ul>
     </section>
     
