--- a/Index.html
+++ b/Index.html
@@ -14,6 +14,16 @@
             <li>Adresse: 343 Rue d'Oyamburua</li>
         </ul>
     </section>
+
+    <section id="form">
+        <h1>Formations</h1>
+        <ul>
+            <li>2022-2025: Ingénieur Mécatronique - ESTIA</li>
+            <li>2020-2022: DUT GIM - IUT Perpignan</li>
+            <li>2019-2020: L1 SPI INFORMATIQUE - UPJV</li>
+            <li>2016-2019: EE - LPK</li>
+        </ul>
+    </section>
     
   </body>
 </html>
