--- a/Index.html
+++ b/Index.html
@@ -24,6 +24,17 @@
             <li>2016-2019: EE - LPK</li>
         </ul>
     </section>
+
+    <section id="exp">
+        <h1>Experiences</h1>
+        <ul>
+            <li>2022-2025: ECM Technologies</li>
+            <li>2020-2022: ETEX Building Performances</li>
+            <li>2019-2020: CEMOI CHOCOLAT</li>
+            <li>2016-2019: NIGELEC</li>
+        </ul>
+    </section>
+
     
   </body>
 </html>
