--- a/Index.html
+++ b/Index.html
@@ -35,6 +35,16 @@
         </ul>
     </section>
 
+    <section id="divers">
+        <h1>Miscellanous</h1>
+        <ul>
+            <li>Danse</li>
+            <li>Karaté</li>
+            <li>Football</li>
+            <li>Tennis</li>
+        </ul>
+    </section>
+
     
   </body>
 </html>
